--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -161,7 +161,7 @@ date.time: H:i:s
 "pageComment_1": "Need to do login for use the comments!"
 "pageComment_2": "Comments are disabled."
 
-"pageCommentType_1": "Argument"
+"pageCommentType_1": "Comment"
 "pageCommentType_2": "Send"
 
 "pageCommentController_1": "Search not completed!"
@@ -404,7 +404,10 @@ date.time: H:i:s
 "pageFormType_12": "Only parent"
 "pageFormType_13": "Only link"
 "pageFormType_14": "Link"
-"pageFormType_15": "Send"
+"pageFormType_15": "Meta description"
+"pageFormType_16": "Meta keywords"
+"pageFormType_17": "Meta robots"
+"pageFormType_18": "Send"
 
 "pageSelectFormType_1": "Alias"
 "pageSelectFormType_2": "Select"
