--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -14,7 +14,7 @@ date.time: H:i:s
 # Index
 "index_1": "WEBSITE CURRENTLY"
 "index_2": "UNDER MAINTENANCE"
-"index_3": "Copyright © 2018 - Reinvent software."
+"index_3": "Copyright © 2019 - Reinvent software."
 "index_4": "All rights reserved."
 "index_5": "Warning!"
 "index_6": "Ok"
@@ -679,18 +679,20 @@ date.time: H:i:s
 "microserviceDeployRender_1": "Microservice deploy render form"
 "microserviceDeployRender_2": "..."
 
-"microserviceDeployCreate_1": "Microservice deploy create form"
-"microserviceDeployCreate_2": "..."
+"microserviceDeployCreate_1": "Back"
+"microserviceDeployCreate_2": "Microservice deploy create form"
+"microserviceDeployCreate_3": "..."
 
-"microserviceDeploySelect_1": "Microservice deploy select form"
-"microserviceDeploySelect_2": "..."
-"microserviceDeploySelect_3": "Id"
-"microserviceDeploySelect_4": "Select"
-"microserviceDeploySelect_5": "Name"
-"microserviceDeploySelect_6": "Description"
-"microserviceDeploySelect_7": "Active"
-"microserviceDeploySelect_8": "Remove"
-"microserviceDeploySelect_9": "Select"
+"microserviceDeploySelect_1": "Back"
+"microserviceDeploySelect_2": "Microservice deploy select form"
+"microserviceDeploySelect_3": "..."
+"microserviceDeploySelect_4": "Id"
+"microserviceDeploySelect_5": "Select"
+"microserviceDeploySelect_6": "Name"
+"microserviceDeploySelect_7": "Description"
+"microserviceDeploySelect_8": "Active"
+"microserviceDeploySelect_9": "Remove"
+"microserviceDeploySelect_10": "Select"
 
 "microserviceDeployProfile_1": "Microservice deploy profile form"
 
@@ -714,12 +716,13 @@ date.time: H:i:s
 "microserviceDeployFormType_15": "User git script"
 "microserviceDeployFormType_16": "User web script"
 "microserviceDeployFormType_17": "Root web path"
-"microserviceDeployFormType_18": "Active"
-"microserviceDeployFormType_19": "No"
-"microserviceDeployFormType_20": "Yes"
-"microserviceDeployFormType_21": "Send"
-"microserviceDeployFormType_22": "Branch name"
-"microserviceDeployFormType_23": "Remove"
+"microserviceDeployFormType_18_i": "You can use multiple commands separate by return (new line)."
+"microserviceDeployFormType_18": "Command"
+"microserviceDeployFormType_19": "Active"
+"microserviceDeployFormType_20": "No"
+"microserviceDeployFormType_21": "Yes"
+"microserviceDeployFormType_22": "Send"
+"microserviceDeployFormType_23": "Branch name"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
@@ -741,6 +744,7 @@ date.time: H:i:s
 "microserviceDeployController_15": "Reset"
 "microserviceDeployController_16": "No"
 "microserviceDeployController_17": "Yes"
+"microserviceDeployController_18": "Ssh connection problem!"
 
 # Microservice api
 "microserviceApi_1": "Profile"
@@ -786,6 +790,7 @@ date.time: H:i:s
 
 "apiBasicFormType_1": "Name"
 "apiBasicFormType_2": "Token"
+"apiBasicFormType_3_i": "You can use multiple ip separate by comma."
 "apiBasicFormType_3": "Ip"
 "apiBasicFormType_4": "Url callback"
 "apiBasicFormType_5": "Database ip"
