Session timeout user and javascript form data completed.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -618,13 +618,14 @@ date.time: H:i:s
 "settingFormType_21": "Use type"
 "settingFormType_22": "Website"
 "settingFormType_23": "Ecommerce"
-"settingFormType_24": "Payment active"
-"settingFormType_25": "Credit active"
-"settingFormType_26": "Paypal sandbox active"
-"settingFormType_27": "Paypal business active"
-"settingFormType_28": "Paypal currency code"
-"settingFormType_29": "Paypal credit amount"
-"settingFormType_30": "Send"
+"settingFormType_24": "Secret passphrase"
+"settingFormType_25": "Payment active"
+"settingFormType_26": "Credit active"
+"settingFormType_27": "Paypal sandbox active"
+"settingFormType_28": "Paypal business active"
+"settingFormType_29": "Paypal currency code"
+"settingFormType_30": "Paypal credit amount"
+"settingFormType_31": "Send"
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
@@ -702,6 +703,7 @@ date.time: H:i:s
 "microserviceDeployFormType_1": "Name"
 "microserviceDeployFormType_2": "Description"
 "microserviceDeployFormType_3": "System user"
+"microserviceDeployFormType_4_i": "If you remove 'Ssh username' you clean 'Ssh password' too."
 "microserviceDeployFormType_4": "Ssh username"
 "microserviceDeployFormType_5": "Ssh password"
 "microserviceDeployFormType_6": "Key public"
@@ -712,17 +714,19 @@ date.time: H:i:s
 "microserviceDeployFormType_11": "Git user email"
 "microserviceDeployFormType_12": "Git user name"
 "microserviceDeployFormType_13": "Git clone url"
-"microserviceDeployFormType_14": "Git clone path"
-"microserviceDeployFormType_15": "User git script"
-"microserviceDeployFormType_16": "User web script"
-"microserviceDeployFormType_17": "Root web path"
-"microserviceDeployFormType_18_i": "You can use multiple commands separate by return (new line)."
-"microserviceDeployFormType_18": "Command"
-"microserviceDeployFormType_19": "Active"
-"microserviceDeployFormType_20": "No"
-"microserviceDeployFormType_21": "Yes"
-"microserviceDeployFormType_22": "Send"
-"microserviceDeployFormType_23": "Branch name"
+"microserviceDeployFormType_14": "Git clone url username"
+"microserviceDeployFormType_15": "Git clone url password"
+"microserviceDeployFormType_16": "Git clone path"
+"microserviceDeployFormType_17": "User git script"
+"microserviceDeployFormType_18": "User web script"
+"microserviceDeployFormType_19": "Root web path"
+"microserviceDeployFormType_20_i": "You can use multiple commands separate by return (new line)."
+"microserviceDeployFormType_20": "Command"
+"microserviceDeployFormType_21": "Active"
+"microserviceDeployFormType_22": "No"
+"microserviceDeployFormType_23": "Yes"
+"microserviceDeployFormType_24": "Send"
+"microserviceDeployFormType_25": "Branch name"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
@@ -789,12 +793,13 @@ date.time: H:i:s
 "apiBasicDelete_2": "Delete"
 
 "apiBasicFormType_1": "Name"
-"apiBasicFormType_2": "Token"
+"apiBasicFormType_2": "Token name"
 "apiBasicFormType_3_i": "You can use multiple ip separate by return (new line)."
 "apiBasicFormType_3": "Ip"
 "apiBasicFormType_4": "Url callback"
 "apiBasicFormType_5": "Database ip"
 "apiBasicFormType_6": "Database name"
+"apiBasicFormType_7_i": "If you remove 'Database username' you clean 'Database password' too."
 "apiBasicFormType_7": "Database username"
 "apiBasicFormType_8": "Database password"
 "apiBasicFormType_9": "Active"
