Active column logic to language, slack and line added.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -302,7 +302,8 @@ date.time: H:i:s
 "controlPanelRole_3": "Really delete all roles?"
 
 "controlPanelSetting_1": "Settings section."
-"controlPanelSetting_2": "Really delete this language?"
+"controlPanelSetting_2": "You try to modify a selected language. If you continue you will be redirect on home page with default language."
+"controlPanelSetting_3": "Really delete this language?"
 
 "controlPanelSettingSlack_1": "Settings slack section."
 "controlPanelSettingSlack_2": "Really delete this incoming webhooks?"
@@ -590,10 +591,13 @@ date.time: H:i:s
 "setting_6": "Lanuage management"
 "setting_7": "Code"
 "setting_8": "Date"
-"setting_9": "Payment"
-"setting_10": "..."
-"setting_11": "Paypal"
-"setting_12": "..."
+"setting_9": "Active"
+"setting_10": "No"
+"setting_11": "Yes"
+"setting_12": "Payment"
+"setting_13": "..."
+"setting_14": "Paypal"
+"setting_15": "..."
 
 "settingFormType_1": "Template"
 "settingFormType_2": "Type 1"
@@ -631,10 +635,13 @@ date.time: H:i:s
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
 "settingController_3": "Setting update completed."
 "settingController_4": "Setting not saved!"
-"settingController_5": "Language deletion completed."
+"settingController_5": "Language create completed."
 "settingController_6": "Language update completed."
-"settingController_7": "Language create completed."
-"settingController_8": "Language not created!"
+"settingController_7": "Language not saved!"
+"settingController_8": "Language deletion completed."
+"settingController_9": "Language deletion not completed!"
+"settingController_10": "Active"
+"settingController_11": "Not active"
 
 # Setting slack
 "settingSlackIw_1": "Incoming webhook"
@@ -645,7 +652,10 @@ date.time: H:i:s
 "settingSlackIwFormType_1": "Name"
 "settingSlackIwFormType_2": "Hook"
 "settingSlackIwFormType_3": "Channel"
-"settingSlackIwFormType_4": "Send"
+"settingSlackIwFormType_4": "Active"
+"settingSlackIwFormType_5": "No"
+"settingSlackIwFormType_6": "Yes"
+"settingSlackIwFormType_7": "Send"
 
 "settingSlackIwController_1": "Incoming webhook not selected!"
 "settingSlackIwController_2": "Incoming webhook create completed."
@@ -664,7 +674,10 @@ date.time: H:i:s
 "settingLinePushFormType_1": "Name"
 "settingLinePushFormType_2": "User id primary"
 "settingLinePushFormType_3": "Access token"
-"settingLinePushFormType_4": "Send"
+"settingLinePushFormType_4": "Active"
+"settingLinePushFormType_5": "No"
+"settingLinePushFormType_6": "Yes"
+"settingLinePushFormType_7": "Send"
 
 "settingLinePushController_1": "Push create completed."
 "settingLinePushController_2": "Push not created!"
