Minor bug fixed.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -725,23 +725,24 @@ date.time: H:i:s
 "microserviceDeployFormType_7": "Remove key public"
 "microserviceDeployFormType_8": "Key private"
 "microserviceDeployFormType_9": "Remove key private"
-"microserviceDeployFormType_10": "Ip"
-"microserviceDeployFormType_11": "Git user email"
-"microserviceDeployFormType_12": "Git user name"
-"microserviceDeployFormType_13": "Git clone url"
-"microserviceDeployFormType_14": "Git clone url username"
-"microserviceDeployFormType_15": "Git clone url password"
-"microserviceDeployFormType_16": "Git clone path"
-"microserviceDeployFormType_17": "User git script"
-"microserviceDeployFormType_18": "User web script"
-"microserviceDeployFormType_19": "Root web path"
-"microserviceDeployFormType_20_i": "You can use multiple commands separate by return (new line)."
-"microserviceDeployFormType_20": "Command"
-"microserviceDeployFormType_21": "Active"
-"microserviceDeployFormType_22": "No"
-"microserviceDeployFormType_23": "Yes"
-"microserviceDeployFormType_24": "Send"
-"microserviceDeployFormType_25": "Branch name"
+"microserviceDeployFormType_10": "Key private password"
+"microserviceDeployFormType_11": "Ip"
+"microserviceDeployFormType_12": "Git user email"
+"microserviceDeployFormType_13": "Git user name"
+"microserviceDeployFormType_14": "Git clone url"
+"microserviceDeployFormType_15": "Git clone url username"
+"microserviceDeployFormType_16": "Git clone url password"
+"microserviceDeployFormType_17": "Git clone path"
+"microserviceDeployFormType_18": "User git script"
+"microserviceDeployFormType_19": "User web script"
+"microserviceDeployFormType_20": "Root web path"
+"microserviceDeployFormType_21_i": "You can use multiple commands separate by return (new line)."
+"microserviceDeployFormType_21": "Command"
+"microserviceDeployFormType_22": "Active"
+"microserviceDeployFormType_23": "No"
+"microserviceDeployFormType_24": "Yes"
+"microserviceDeployFormType_25": "Send"
+"microserviceDeployFormType_26": "Branch name"
 
 "microserviceDeploySelectFormType_1": "Name"
 "microserviceDeploySelectFormType_2": "Select"
