--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -729,6 +729,7 @@ date.time: H:i:s
 "microserviceDeployFormType_11": "Ip"
 "microserviceDeployFormType_12": "Git user email"
 "microserviceDeployFormType_13": "Git user name"
+"microserviceDeployFormType_14_i": "Without https:// (is setted by default)."
 "microserviceDeployFormType_14": "Git clone url"
 "microserviceDeployFormType_15": "Git clone url username"
 "microserviceDeployFormType_16": "Git clone url password"
