--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -421,7 +421,7 @@ date.time: H:i:s
 "pageController_5": "Page update completed."
 "pageController_6": "Page update not completed!"
 "pageController_7": "Page deletion completed."
-"pageController_8": "This page contain another pages, choise the action:"
+"pageController_8": "This page is a parent, choose an action:"
 "pageController_9": "Delete all page"
 "pageController_10": "Change parent"
 "pageController_11": "All pages deletion completed."
