Minor bug fixed.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -779,6 +779,7 @@ date.time: H:i:s
 "microserviceApiProfile_1": "Back"
 "microserviceApiProfile_2": "Api profile form"
 "microserviceApiProfile_3": "..."
+"microserviceApiProfile_4": "There is no controller!"
 
 "microserviceApiFormType_1": "Name"
 "microserviceApiFormType_2": "Controller"
