--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -448,6 +448,7 @@ date.time: H:i:s
 "userSelect_11": "Select"
 
 "userProfile_1": "User profile form"
+"userProfile_2": "Attempt login:"
 
 "userDelete_1": "Warning! If you delete the user is impossible return back."
 "userDelete_2": "Delete"
@@ -486,11 +487,13 @@ date.time: H:i:s
 "userController_4": "User not selected!"
 "userController_5": "User update completed."
 "userController_6": "User update not completed!"
-"userController_7": "User deletion completed."
-"userController_8": "All users deletion completed."
-"userController_9": "User not deleted!"
-"userController_10": "No"
-"userController_11": "Yes"
+"userController_7": "Attempt login reset completed."
+"userController_8": "Attempt login reset not completed!"
+"userController_9": "User deletion completed."
+"userController_10": "All users deletion completed."
+"userController_11": "User not deleted!"
+"userController_12": "No"
+"userController_13": "Yes"
 
 # Module
 "module_1": "Authentication"
