--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -208,17 +208,16 @@ date.time: H:i:s
 "upload_4": "Error listener!"
 "upload_5": "Completed. Now you can close this window."
 
-"classUpload_1": "Error chunk size!"
-"classUpload_2": "Error input type!"
-"classUpload_3": "Error types!"
-"classUpload_4": "Error max size!"
-"classUpload_5": "Error image size!"
-"classUpload_6": "Upload stopped."
-"classUpload_7": "Upload not stopped!"
-"classUpload_8": "File exists!"
-"classUpload_9": "Chunk not sended!"
-"classUpload_10": "File uploaded successfully."
-"classUpload_11": "File not uploaded!"
+"classUpload_1": "Upload stopped."
+"classUpload_2": "Upload not stopped!"
+"classUpload_3": "File exists!"
+"classUpload_4": "Error chunk size!"
+"classUpload_5": "Error mime type!"
+"classUpload_6": "Error max size!"
+"classUpload_7": "Error Image size!"
+"classUpload_8": "Chunk not sended!"
+"classUpload_9": "File uploaded successfully."
+"classUpload_10": "File not uploaded!"
 
 # Captcha
 "captcha_1": "Chaptcha code incorrect!"
@@ -448,7 +447,6 @@ date.time: H:i:s
 "userSelect_11": "Select"
 
 "userProfile_1": "User profile form"
-"userProfile_2": "Attempt login:"
 
 "userDelete_1": "Warning! If you delete the user is impossible return back."
 "userDelete_2": "Delete"
@@ -487,13 +485,11 @@ date.time: H:i:s
 "userController_4": "User not selected!"
 "userController_5": "User update completed."
 "userController_6": "User update not completed!"
-"userController_7": "Attempt login reset completed."
-"userController_8": "Attempt login reset not completed!"
-"userController_9": "User deletion completed."
-"userController_10": "All users deletion completed."
-"userController_11": "User not deleted!"
-"userController_12": "No"
-"userController_13": "Yes"
+"userController_7": "User deletion completed."
+"userController_8": "All users deletion completed."
+"userController_9": "User not deleted!"
+"userController_10": "No"
+"userController_11": "Yes"
 
 # Module
 "module_1": "Authentication"
