Multi tab logic and small fix.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -22,6 +22,7 @@ date.time: H:i:s
 "index_8": "Connection error, please reload the page."
 "index_9": "Expand"
 "index_10": "Collapse"
+"index_11": "Multi tab are not allowed!"
 
 # My page
 "myPage_1": "My page section."
