--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -293,6 +293,7 @@ date.time: H:i:s
 "controlPanelPage_1": "Pages section."
 "controlPanelPage_2": "Really delete this page?"
 "controlPanelPage_3": "Really delete all pages?"
+"controlPanelPage_4": "Really publish this page?"
 
 "controlPanelUser_1": "Users section."
 "controlPanelUser_2": "Really delete this user?"
@@ -386,13 +387,11 @@ date.time: H:i:s
 "pageSelect_3": "Id"
 "pageSelect_4": "Select"
 "pageSelect_5": "Alias"
-"pageSelect_6": "Title"
-"pageSelect_7": "Menu name"
-"pageSelect_8": "Protected"
-"pageSelect_9": "Show in menu"
-"pageSelect_10": "Only link"
-"pageSelect_11": "Delete"
-"pageSelect_12": "Send"
+"pageSelect_6": "Protected"
+"pageSelect_7": "Show in menu"
+"pageSelect_8": "Only link"
+"pageSelect_9": "Delete"
+"pageSelect_10": "Send"
 
 "pageProfile_1": "Page profile form"
 "pageProfile_2": "Created from: "
@@ -402,6 +401,7 @@ date.time: H:i:s
 "pageProfile_6": "Position in menu"
 "pageProfile_7": "Sort up"
 "pageProfile_8": "Sort down"
+"pageProfile_9": "Publish"
 
 "pageDelete_1": "Warning! If you delete the page is impossible return back."
 "pageDelete_2": "Delete"
@@ -434,7 +434,8 @@ date.time: H:i:s
 "pageController_3": "Page not created!"
 "pageController_4": "Page not selected!"
 "pageController_5_a": "Page draft completed."
-"pageController_5_b": "Page update completed."
+"pageController_5_b": "Page draft not completed!"
+"pageController_5_c": "Page update completed."
 "pageController_6": "Page update not completed!"
 "pageController_7": "Page deletion completed."
 "pageController_8": "This page is a parent, choose an action:"
@@ -445,6 +446,8 @@ date.time: H:i:s
 "pageController_13": "Page not deleted!"
 "pageController_14": "No"
 "pageController_15": "Yes"
+"pageController_16": "Page published."
+"pageController_17": "Page not published!"
 
 # User
 "userCreate_1": "User create form"
