--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -19,7 +19,7 @@ date.time: H:i:s
 "index_5": "Warning!"
 "index_6": "Ok"
 "index_7": "Close"
-"index_8": "Problem with request, please reload the page."
+"index_8": "Session time is over, please login again."
 "index_9": "Expand"
 "index_10": "Collapse"
 "index_11": "Multi tab are not allowed!"
