--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -124,9 +124,9 @@ date.time: H:i:s
 "creditFormType_2": "Send"
 
 # Authentication
-"authentication_1": "Welcome:"
-"authentication_2": "Role:"
-"authentication_3": "Last login:"
+"authentication_1": "Welcome"
+"authentication_2": "Role"
+"authentication_3": "Last login"
 "authentication_4": "My page"
 "authentication_5": "Logout"
 "authentication_6": "Registration"
@@ -231,7 +231,7 @@ date.time: H:i:s
 # Wysiwyg
 "wysiwyg_1": "Text format"
 "wysiwyg_2": "Text size"
-"wysiwyg_3": "Settings"
+"wysiwyg_3": "Setting"
 "wysiwyg_4": "Close"
 "wysiwyg_5": "Link create"
 "wysiwyg_6": "Insert full url"
@@ -243,7 +243,7 @@ date.time: H:i:s
 "wysiwyg_12": "Table create"
 "wysiwyg_13": "Insert rows number"
 "wysiwyg_14": "Insert columns number"
-"wysiwyg_15": "Element settings"
+"wysiwyg_15": "Element setting"
 "wysiwyg_16": "Row:"
 "wysiwyg_17": "Add"
 "wysiwyg_18": "Delete"
@@ -274,12 +274,12 @@ date.time: H:i:s
 "controlPanel_3": "You don't have the permissions for access on this page!"
 "controlPanel_4": "Website home"
 "controlPanel_5": "Sytem info"
-"controlPanel_6": "Payments"
-"controlPanel_7": "Pages"
-"controlPanel_8": "Users"
-"controlPanel_9": "Modules"
-"controlPanel_10": "Roles"
-"controlPanel_11": "Settings"
+"controlPanel_6": "Payment"
+"controlPanel_7": "Page"
+"controlPanel_8": "User"
+"controlPanel_9": "Module"
+"controlPanel_10": "Role"
+"controlPanel_11": "Setting"
 "controlPanel_12": "Slack"
 "controlPanel_13": "Line"
 "controlPanel_14": "Microservice"
@@ -312,14 +312,14 @@ date.time: H:i:s
 "controlPanelRole_2": "Really delete this role?"
 "controlPanelRole_3": "Really delete all roles?"
 
-"controlPanelSetting_1": "Settings section."
+"controlPanelSetting_1": "Setting section."
 "controlPanelSetting_2": "You try to modify a selected language. If you continue you will be redirect on home page with default language."
 "controlPanelSetting_3": "Really delete this language?"
 
-"controlPanelSettingSlack_1": "Settings slack section."
+"controlPanelSettingSlack_1": "Setting slack section."
 "controlPanelSettingSlack_2": "Really delete this incoming webhooks?"
 
-"controlPanelSettingLine_1": "Settings line section."
+"controlPanelSettingLine_1": "Setting line section."
 "controlPanelSettingLine_2": "Really delete this line push?"
 
 "controlPanelMicroserviceDeploy_1": "Deploy section."
