--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -812,12 +812,13 @@ date.time: H:i:s
 "microserviceDeployController_12": "Microservice deploy not deleted!"
 "microserviceDeployController_13": "Clone"
 "microserviceDeployController_14": "Pull"
-"microserviceDeployController_15": "Reset"
-"microserviceDeployController_16": "No"
-"microserviceDeployController_17": "Yes"
-"microserviceDeployController_18": "Ssh connection problem!"
-"microserviceDeployController_19": "Password cleared."
-"microserviceDeployController_20": "Password not cleared!"
+"microserviceDeployController_15": "Fetch"
+"microserviceDeployController_16": "Reset"
+"microserviceDeployController_17": "No"
+"microserviceDeployController_18": "Yes"
+"microserviceDeployController_19": "Ssh connection problem!"
+"microserviceDeployController_20": "Password cleared."
+"microserviceDeployController_21": "Password not cleared!"
 
 # Microservice api
 "microserviceApi_1": "Profile"
