Small fix and improvement.

--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -53,7 +53,7 @@ date.time: H:i:s
 "myPageProfileController_6": "Sending to PayPal..."
 "myPageProfileController_7": "Not sended to PayPal!"
 
-"myPagePaymentSelect_1": "Payments selection form"
+"myPagePaymentSelect_1": "Payment selection form"
 "myPagePaymentSelect_2": "..."
 "myPagePaymentSelect_3": "Id"
 "myPagePaymentSelect_4": "Select"
@@ -281,7 +281,7 @@ date.time: H:i:s
 "controlPanel_7": "Page"
 "controlPanel_8": "User"
 "controlPanel_9": "Module"
-"controlPanel_10": "Role"
+"controlPanel_10": "Role user"
 "controlPanel_11": "Setting"
 "controlPanel_12": "Slack"
 "controlPanel_13": "Line"
@@ -293,27 +293,27 @@ date.time: H:i:s
 "controlPanel_19": "Selenium"
 "controlPanel_20": "Cron"
 
-"controlPanelPayment_1": "Payments section."
+"controlPanelPayment_1": "Payment section."
 "controlPanelPayment_2": "Really delete this payment?"
 "controlPanelPayment_3": "Really delete all payments?"
 
-"controlPanelPage_1": "Pages section."
+"controlPanelPage_1": "Page section."
 "controlPanelPage_2": "Really delete this page?"
 "controlPanelPage_3": "Really delete all pages?"
 "controlPanelPage_4": "Really save in draft this page?"
 "controlPanelPage_5": "Really publish this page?"
 
-"controlPanelUser_1": "Users section."
+"controlPanelUser_1": "User section."
 "controlPanelUser_2": "Really delete this user?"
 "controlPanelUser_3": "Really delete all users?"
 
-"controlPanelModule_1": "Modules section."
+"controlPanelModule_1": "Module section."
 "controlPanelModule_2": "Really delete this module?"
 "controlPanelModule_3": "Really delete all modules?"
 
-"controlPanelRole_1": "Roles section."
-"controlPanelRole_2": "Really delete this role?"
-"controlPanelRole_3": "Really delete all roles?"
+"controlPanelRoleUser_1": "Role user section."
+"controlPanelRoleUser_2": "Really delete this role user?"
+"controlPanelRoleUser_3": "Really delete all role user?"
 
 "controlPanelSetting_1": "Setting section."
 "controlPanelSetting_2": "You try to modify a selected language. If you continue you will be redirect on home page with default language."
@@ -354,7 +354,7 @@ date.time: H:i:s
 "paymentUserSelect_1": "Payments user selection form"
 "paymentUserSelect_2": "..."
 
-"paymentSelect_1": "Payments selection form"
+"paymentSelect_1": "Payment selection form"
 "paymentSelect_2": "..."
 "paymentSelect_3": "Id"
 "paymentSelect_4": "Select"
@@ -400,7 +400,7 @@ date.time: H:i:s
 "pageCreate_5": "Sort down"
 "pageCreate_6": "Save draft"
 
-"pageSelect_1": "Pages selection form"
+"pageSelect_1": "Page selection form"
 "pageSelect_2": "..."
 "pageSelect_3": "Id"
 "pageSelect_4": "Select"
@@ -471,7 +471,7 @@ date.time: H:i:s
 "userCreate_1": "User create form"
 "userCreate_2": "..."
 
-"userSelect_1": "Users selection form"
+"userSelect_1": "User selection form"
 "userSelect_2": "..."
 "userSelect_3": "Id"
 "userSelect_4": "Select"
@@ -544,7 +544,7 @@ date.time: H:i:s
 "moduleCreate_4": "Sort up"
 "moduleCreate_5": "Sort down"
 
-"moduleSelect_1": "Modules selection form"
+"moduleSelect_1": "Module selection form"
 "moduleSelect_2": "..."
 "moduleSelect_3": "Id"
 "moduleSelect_4": "Select"
@@ -593,10 +593,10 @@ date.time: H:i:s
 "User": "User"
 "Moderator": "Moderator"
 
-"roleUserCreate_1": "Role create form"
+"roleUserCreate_1": "Role user create form"
 "roleUserCreate_2": "..."
 
-"roleUserSelect_1": "Roles selection form"
+"roleUserSelect_1": "Role user selection form"
 "roleUserSelect_2": "..."
 "roleUserSelect_3": "Id"
 "roleUserSelect_4": "Select"
@@ -604,7 +604,7 @@ date.time: H:i:s
 "roleUserSelect_6": "Delete"
 "roleUserSelect_7": "Select"
 
-"roleUserProfile_1": "Role profile form"
+"roleUserProfile_1": "Role user profile form"
 
 "roleUserDelete_1": "Warning! If you delete the role is impossible return back."
 "roleUserDelete_2": "Delete"
@@ -615,20 +615,20 @@ date.time: H:i:s
 "roleUserSelectFormType_1": "Level"
 "roleUserSelectFormType_2": "Select"
 
-"roleUserController_1": "Role create completed."
-"roleUserController_2": "Role not created!"
-"roleUserController_3": "Role not selected!"
-"roleUserController_4": "Role update completed."
-"roleUserController_5": "Role update not completed!"
-"roleUserController_6": "Role deletion completed."
-"roleUserController_7": "All roles deletion completed."
-"roleUserController_8": "Role not deleted!"
+"roleUserController_1": "Role user create completed."
+"roleUserController_2": "Role user not created!"
+"roleUserController_3": "Role user not selected!"
+"roleUserController_4": "Role user update completed."
+"roleUserController_5": "Role user update not completed!"
+"roleUserController_6": "Role user deletion completed."
+"roleUserController_7": "All role user deletion completed."
+"roleUserController_8": "Role user not deleted!"
 
 # Setting
 "setting_1": "Style"
 "setting_2": "..."
 "setting_3": "Column type"
-"setting_4": "System"
+"setting_4": "Framework"
 "setting_5": "..."
 "setting_6": "Language management"
 "setting_7": "Code"
@@ -641,6 +641,8 @@ date.time: H:i:s
 "setting_14": "Paypal"
 "setting_15": "..."
 "setting_16": "Db value do not match! Correct value is:"
+"setting_17": "System"
+"setting_18": "..."
 
 "settingFormType_1": "Template"
 "settingFormType_2": "Type 1"
@@ -673,10 +675,20 @@ date.time: H:i:s
 "settingFormType_29": "Paypal currency code"
 "settingFormType_30": "Paypal credit amount"
 "settingFormType_31": "Javascript minify"
-"settingFormType_32": "Server user"
-"settingFormType_33": "Server root"
-"settingFormType_34": "Server host"
+"settingFormType_32": "User"
+"settingFormType_33": "Root path"
+"settingFormType_34": "Host"
 "settingFormType_35": "Send"
+"settingFormType_36": "Block multitab"
+"settingFormType_37": "Ip"
+"settingFormType_38": "Ssh username"
+"settingFormType_39": "Ssh password"
+"settingFormType_40": "Key public"
+"settingFormType_41": "Delete key"
+"settingFormType_42": "Key private"
+"settingFormType_43": "Delete key"
+"settingFormType_44": "Key private password"
+
 
 "settingController_1": "Roles maintenance"
 "settingController_2": "Protocol value has changed, please login again (if you have changed from https to http you need close and to open browser for to do login)."
@@ -689,6 +701,9 @@ date.time: H:i:s
 "settingController_9": "Language deletion not completed!"
 "settingController_10": "Active"
 "settingController_11": "Not active"
+"settingController_12": "Password cleared."
+"settingController_13": "Password not cleared!"
+"settingController_14": "Really clear this password?"
 
 # Setting slack
 "settingSlackIw_1": "Incoming webhook"
@@ -829,7 +844,6 @@ date.time: H:i:s
 "microserviceApiCreate_1": "Back"
 "microserviceApiCreate_2": "Api create form"
 "microserviceApiCreate_3": "..."
-"microserviceApiCreate_4": "Image"
 
 "microserviceApiProfile_1": "Back"
 "microserviceApiProfile_2": "Api profile form"
@@ -839,7 +853,7 @@ date.time: H:i:s
 "microserviceApiFormType_1": "Name"
 "microserviceApiFormType_2": "Controller"
 "microserviceApiFormType_3": "Description"
-"microserviceApiFormType_4": ""
+"microserviceApiFormType_4": "Image"
 "microserviceApiFormType_5": "Delete"
 "microserviceApiFormType_6": "Active"
 "microserviceApiFormType_7": "No"
