--- a/symfony_fw/translations/messages.en.yaml
+++ b/symfony_fw/translations/messages.en.yaml
@@ -289,7 +289,7 @@ date.time: H:i:s
 "controlPanel_15": "Deploy"
 "controlPanel_16": "Api"
 "controlPanel_17": "Ecommerce"
-"controlPanel_18": "Unit test"
+"controlPanel_18": "Qunit"
 "controlPanel_19": "Selenium"
 "controlPanel_20": "Cron"
 
@@ -335,10 +335,10 @@ date.time: H:i:s
 "controlPanelMicroserviceApi_2": "Really delete this apiBasic?"
 "controlPanelMicroserviceApi_3": "Really clear this password?"
 
-"controlPanelMicroserviceUnitTest_1": "Unit test section."
-"controlPanelMicroserviceUnitTest_2": "Insert iframe code in your page and script code on bottom of your page:"
-"controlPanelMicroserviceUnitTest_3": "Really delete this unit test?"
-"controlPanelMicroserviceUnitTest_4": "Really delete all unit test?"
+"controlPanelMicroserviceQunit_1": "Qunit section."
+"controlPanelMicroserviceQunit_2": "Insert iframe code in your page and script code on bottom of your page:"
+"controlPanelMicroserviceQunit_3": "Really delete this qunit test?"
+"controlPanelMicroserviceQunit_4": "Really delete all qunit test?"
 
 "controlPanelMicroserviceSelenium_1": "Selenium section."
 "controlPanelMicroserviceSelenium_2": "Install:"
@@ -922,47 +922,47 @@ date.time: H:i:s
 "apiBasicController_17": "Password cleared."
 "apiBasicController_18": "Password not cleared!"
 
-# Microservice unit test
-"microserviceUnitTestCreate_1": "Unit test create form"
-"microserviceUnitTestCreate_2": "..."
+# Microservice qunit
+"microserviceQunitCreate_1": "Qunit test create form"
+"microserviceQunitCreate_2": "..."
 
-"microserviceUnitTestSelect_1": "Unite test selection form"
-"microserviceUnitTestSelect_2": "..."
-"microserviceUnitTestSelect_3": "Id"
-"microserviceUnitTestSelect_4": "Select"
-"microserviceUnitTestSelect_5": "Name"
-"microserviceUnitTestSelect_6": "Active"
-"microserviceUnitTestSelect_7": "Delete"
-"microserviceUnitTestSelect_8": "Select"
+"microserviceQunitSelect_1": "Qunit test selection form"
+"microserviceQunitSelect_2": "..."
+"microserviceQunitSelect_3": "Id"
+"microserviceQunitSelect_4": "Select"
+"microserviceQunitSelect_5": "Name"
+"microserviceQunitSelect_6": "Active"
+"microserviceQunitSelect_7": "Delete"
+"microserviceQunitSelect_8": "Select"
 
-"microserviceUnitTestProfile_1": "Unit test profile form"
+"microserviceQunitProfile_1": "Unit test profile form"
 
-"microserviceUnitTestDelete_1": "Warning! If you delete the unit test is impossible return back."
-"microserviceUnitTestDelete_2": "Delete"
+"microserviceQunitDelete_1": "Warning! If you delete the qunit test is impossible return back."
+"microserviceQunitDelete_2": "Delete"
 
-"microserviceUnitTestFormType_1": "Name"
-"microserviceUnitTestFormType_2_i": "You can use multiple url separate by return (new line)."
-"microserviceUnitTestFormType_2": "Origin"
-"microserviceUnitTestFormType_3": "Code"
-"microserviceUnitTestFormType_4": "Active"
-"microserviceUnitTestFormType_5": "No"
-"microserviceUnitTestFormType_6": "Yes"
-"microserviceUnitTestFormType_7": "Send"
+"microserviceQunitFormType_1": "Name"
+"microserviceQunitFormType_2_i": "You can use multiple url separate by return (new line)."
+"microserviceQunitFormType_2": "Origin"
+"microserviceQunitFormType_3": "Code"
+"microserviceQunitFormType_4": "Active"
+"microserviceQunitFormType_5": "No"
+"microserviceQunitFormType_6": "Yes"
+"microserviceQunitFormType_7": "Send"
 
-"microserviceUnitTestSelectFormType_1": "Name"
-"microserviceUnitTestSelectFormType_2": "Select"
+"microserviceQunitSelectFormType_1": "Name"
+"microserviceQunitSelectFormType_2": "Select"
 
-"microserviceUnitTestController_1": "Unit test create completed."
-"microserviceUnitTestController_2": "Unit test not created!"
-"microserviceUnitTestController_3": "Unit test not selected!"
-"microserviceUnitTestController_4": "Unit test update completed."
-"microserviceUnitTestController_5": "Unit test update not completed!"
-"microserviceUnitTestController_6": "Unit test deletion completed."
-"microserviceUnitTestController_7": "All Unit test deletion completed."
-"microserviceUnitTestController_8": "Unit test not deleted!"
-"microserviceUnitTestController_9": "No"
-"microserviceUnitTestController_10": "Yes"
-"microserviceUnitTestController_11": "Unit test is not active."
+"microserviceQunitController_1": "Qunit test create completed."
+"microserviceQunitController_2": "Qunit test not created!"
+"microserviceQunitController_3": "Qunit test not selected!"
+"microserviceQunitController_4": "Qunit test update completed."
+"microserviceQunitController_5": "Qunit test update not completed!"
+"microserviceQunitController_6": "Qunit test deletion completed."
+"microserviceQunitController_7": "All qunit test deletion completed."
+"microserviceQunitController_8": "Qunit test not deleted!"
+"microserviceQunitController_9": "No"
+"microserviceQunitController_10": "Yes"
+"microserviceQunitController_11": "Qunit test is not active."
 
 # Microservice selenium
 "microserviceSeleniumSelect_1": "Selenium project file"
